--- a/favorite.html
+++ b/favorite.html
@@ -30,7 +30,7 @@
       <ons-splitter-side id="menu" side="left" width="220px" swipe-target-width="125px" collapse swipeable >
         <ons-page>
           <ons-list id="chatMember">
-            <ons-list-header><img src='logo.png' width='70%'></ons-list-header>
+            <ons-list-header><img src='logo.png' width='70%'>Menu</ons-list-header>
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <a href="about.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>About</ons-list-item></a>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
@@ -149,6 +149,10 @@
           alert('code: '    + error.code    + '\n' +
                 'message: ' + error.message + '\n');
       }
+      function pindahDetail(id){
+        localStorage.setItem("detailID",id);
+        window.location = "detail.html";
+      }
     function onDeviceReady(){
       ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
       navigator.geolocation.getCurrentPosition(onSuccess, onError);
@@ -156,7 +160,7 @@
         data = JSON.parse(data);
           $("#isifav").html("");
         for(var i= 0;i<data.length;i++){
-          $("#isifav").html($("#isifav").html()+'<div class="horizontal-menu-fav" style="display:absolute;"><div class="detailFavorite" style="display:inline-block;"><div class="img-feature"><center><img src="'+data[i].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><h5><b>'+data[i].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[i].kapasitas+' Orang &bull; '+(Math.floor(data[i].distance*1000)/1000)+' km</span></div></div></div>');
+          $("#isifav").html($("#isifav").html()+'<div class="horizontal-menu-fav" onclick="pindahDetail(\''+data[i].id_rumah+'\')" style="display:absolute;"><div class="detailFavorite" style="display:inline-block;"><div class="img-feature"><center><img src="'+data[i].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><h5><b>'+data[i].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[i].kapasitas+' Orang &bull; '+(Math.floor(data[i].distance*1000)/1000)+' km</span></div></div></div>');
         }
       });
     };
