--- a/detail.html
+++ b/detail.html
@@ -88,7 +88,7 @@
 					</ol>
 
 					<!-- Wrapper for slides -->
-					<div class="carousel-inner">
+					<div class="carousel-inner" id="isicarousel">
 						<div class="item active">
 						  <img src="img/home.jpg" style="width:100%;height:100%">
 						</div>
@@ -115,28 +115,28 @@
 		</div>
 
 		<img class="heartFav" src="img/heart.png" style="width:10%;height:5%;position:absolute;top:10px;right:10px;">
-		<h1 style="margin-left:10px;font-family:AgencyFB">Comfy Family Home</h1>
-		<p style="margin-left:10px;font-size:1em;">Surabaya</p>
-		<p style="margin-left:10px;color:gray;float:left;">Hosted by </p>
+		<h1 style="margin-left:10px;font-family:AgencyFB" id="titlehome">Comfy Family Home</h1>
+		<p style="margin-left:10px;font-size:1em;" id="kota">Surabaya</p>
+		<p style="margin-left:10px;color:gray;float:left;">Hosted by &nbsp;</p>
 		<p id="nameHost" style="margin-left:10px;color:gray;float:none;">&nbsp;<a href="#" style="color:#f94d6e">Kenji</a></p>
 		<div class="profileHost" style="width:75px;height:75px;position:absolute;top:45%;right:30px;border-radius:50px;background-image:url(img/kenji.jpg);background-size:cover;repeat:no-repeat;"></div>
 		<hr>
 		<center><div class="facility" style="width:95%%;height:12%;margin-left:10px;clear:both;margin-top:20px;font-size:0.8em">
 			<div class="fasil" style="width:20%;height:100%;float:left">
 				<img src='img/people.png' style="width:70%;height:70%;"><br>
-				<p>4 Guest</p>
+				<p id="maxOrang">4 Guest</p>
 			</div>
 			<div class="fasil" style="width:23%;height:100%;float:left">
 				<img src='img/room.png' style="width:70%;height:70%;"><br>
-				<p>2 Bedrooms</p>
+				<p id="maxBedRoom">2 Bedrooms</p>
 			</div>
 			<div class="fasil" style="width:25%;height:100%;float:left">
 				<img src='img/bed.png' style="width:70%;height:70%;"><br>
-				<p>4 Beds</p>
+				<p id="maxBeds">4 Beds</p>
 			</div>
 			<div class="fasil" style="width:25%;height:100%;float:left">
 				<img src='img/bath.png' style="width:70%;height:70%;"><br>
-				<p>2 Bathrooms</p>
+				<p id="maxBathroom">2 Bathrooms</p>
 			</div>
 		</div></center>
 		<hr>
@@ -210,19 +210,26 @@
       }
     function onDeviceReady(){
       ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
-      ini2 = localStorage.getItem("tipeName");
+      ini2 = localStorage.getItem("detailID") != null ? localStorage.getItem("detailID") : "gdaniel";
       navigator.geolocation.getCurrentPosition(onSuccess, onError);
-      $.post(server, {'userskr' : ini ,'longkita' : longkita , 'latkita': latkita,'tipe': ini2},function(data){
+      $.post(server, {'id': ini2,'tipe': "ambilDetail"},function(data){
         data = JSON.parse(data);
-        if(ini2 == "ambilNearme"){
-          data.sort(function(a,b){
-            return a.distance - b.distance;
-          });
-        }
-          $("#isiSeemore").html("");
-        for(var i= 0;i<data.length;i++){
-          $("#isiSeemore").html($("#isiSeemore").html()+'<div class="horizontal-menu-fav" style="display:absolute;"><div class="detailFavorite" style="display:inline-block;"><div class="img-feature"><center><img src="'+data[i].picture_rumah+'" style="width:100%;height:100%;"></center></div><div class="content"><h5><b>'+data[i].title_rumah+'</b></h5><span style="font-size: 0.8em">'+data[i].kapasitas+' Orang &bull; '+(Math.floor(data[i].distance*1000)/1000)+' km</span></div></div></div>');
-        }
+        console.log(data);
+        var isipic = data.picture_rumah[5] == ":" ? data.picture_rumah : "http://192.168.1.3/sdpajax/"+data.picture_rumah;
+        $(".item").html('<img src="'+isipic+'" style="width:100%;height:100%">');
+        $("#titlehome").html(data.title_rumah);
+        $("#kota").html(data.kota);
+        $("#nameHost").html(data.id_user);
+        $("#maxOrang").html(data.kapasitas+" Orang");
+        $("#maxBeds").html(data.jumlah_kasur + " Beds");
+        $("#maxBedRoom").html(data.jumlah_kamar + " Bedroom");
+        $("#maxBathroom").html(data.jumlah_kamar_mandi + " Bathroom");
+        $.post(server, {'userskr': data.id_user,'tipe': "selectProfile"},function(data2){
+          data2 = JSON.parse(data2);
+          var isipic = data2.picture_user[5] == ":" ? data2.picture_user : "http://192.168.1.3/sdpajax/"+data2.picture_user;
+          $(".profileHost").css("background-image","url('"+isipic+"')");
+        });
+        $(".isiDetail").html(data.keterangan);
       });
     };
     $(document).ready(onDeviceReady);
@@ -243,7 +250,46 @@
             text: "Hai Hai Timo"
         });
     };
+    function onBackKeyDown(){
+      makeNotification();
+      $.post(server, {'chat': chat, 'nama': nama, 'tipe': 2});
 
+      var x = confirm("Are you sure ?");
+      window.plugins.googleplus.disconnect(
+        function (msg) {
+          alert("Berhasil Logout Google"); // do something useful instead of alerting
+        },function (msg) {
+          alert("Gagal Logout Google"); // do something useful instead of alerting
+          x=false;
+          alert(msg);
+
+        }
+      );
+      facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
+        alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+      }, function (msg) {
+        alert("Gagal Logout Facebook"); // do something useful instead of alerting
+        x=false;
+        alert(msg);
+      });
+      facebookConnectPlugin.logout(function (msg) {
+        alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+      }, function (msg) {
+        alert("Gagal Logout Facebook"); // do something useful instead of alerting
+        x=false;
+        alert(msg);
+      });
+
+      if(x){
+        if (navigator.app) {
+            navigator.app.exitApp();
+        } else if (navigator.device) {
+            navigator.device.exitApp();
+        } else {
+            window.close();
+        }
+      }
+    }
   app.initialize();
   </script>
 
