--- a/list_home.html
+++ b/list_home.html
@@ -34,7 +34,7 @@
             <a href="next.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Home</ons-list-item></a>
             <a href="about.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>About</ons-list-item></a>
             <a href="profile.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Profile</ons-list-item></a>
-            <ons-list-item class="mentionBtn" tappable>Support</ons-list-item>
+            <a href="founders.html" style="text-decoration:none;"><ons-list-item class="mentionBtn" tappable>Founders</ons-list-item></a>
             <ons-list-item style="position:absolute;overflow:hidden;bottom:0;" class="mentionBtn" onclick="onBackKeyDown()" tappable>Logout</ons-list-footer>
           </ons-list>
         </ons-page>
