--- a/detail.html
+++ b/detail.html
@@ -183,7 +183,7 @@
   <script type="text/javascript">
 	function coba(event){
 		var x = event.clientX;
-		document.getElementById("aboutHome").innerHTML = x;
+		//document.getElementById("aboutHome").innerHTML = x;
 	}
   var server = "http://192.168.1.3/sdpajax/server.php";
   var ini,ini2;
@@ -208,6 +208,9 @@
           alert('code: '    + error.code    + '\n' +
                 'message: ' + error.message + '\n');
       }
+      const numberWithCommas = (x) => {
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+      }
     function onDeviceReady(){
       ini = localStorage.getItem("storageName") != null ? localStorage.getItem("storageName") : "tm_tr" ;
       ini2 = localStorage.getItem("detailID") != null ? localStorage.getItem("detailID") : "gdaniel";
@@ -224,12 +227,28 @@
         $("#maxBeds").html(data.jumlah_kasur + " Beds");
         $("#maxBedRoom").html(data.jumlah_kamar + " Bedroom");
         $("#maxBathroom").html(data.jumlah_kamar_mandi + " Bathroom");
+        $(".price").html('Rp '+numberWithCommas(data.harga));
+        $(".captReview").html("Rates "+data.rating+" of 5");
         $.post(server, {'userskr': data.id_user,'tipe': "selectProfile"},function(data2){
           data2 = JSON.parse(data2);
           var isipic = data2.picture_user[5] == ":" ? data2.picture_user : "http://192.168.1.3/sdpajax/"+data2.picture_user;
           $(".profileHost").css("background-image","url('"+isipic+"')");
         });
         $(".isiDetail").html(data.keterangan);
+        $("#reviews").html("<hr />");
+        $.post(server, {'id': ini2 ,'tipe': "selectReview"},function(data2){
+          data2 = JSON.parse(data2);
+          console.log(data2);
+          for (var i = 0; i < data.length; i++) {
+            var isipic,namapanjang;
+            $.post(server, {'userskr': data2.id_user,'tipe': "selectProfile"},function(data3){
+              data3 = JSON.parse(data2);
+              isipic = data3.picture_user[5] == ":" ? data3.picture_user : "http://192.168.1.3/sdpajax/"+data3.picture_user;
+              namapanjang = data3.name_user
+            });
+            $("#reviews").html($("#reviews").html()+'<div class="kiri" style="width:20%;height:auto;float:left;margin-right:20px;margin-left:10px;"><div class="fotoUser" style="width:50px;height:50px;position:relative;border-radius:50px;background-image:url('+isipic+');background-size:cover;repeat:no-repeat;float:left"></div></div><div class="kanan" style="width:auto;height:auto;position:relative;margin-top:20px;margin-left:20px;"><div class="namaUser" style="width:auto;height:auto;position:relative;font-size:1.5em;font-family:AgencyFB;float:none;">'+namapanjang+'</div><div class="tglReview" style="width:auto;height:auto;position:relative;font-size:1em;font-family:HNLight;float:none;color:lightgray;font-weight:none;">November 2017</div></div><div class="isiReview" style="width:auto;height:auto;margin-top:10px;position:relative;font-size:1em;font-family:HNLight;float:none;color:black;font-weight:none;clear:both;">'+data2[i].review+'</div><hr>');
+          }
+        });
       });
     };
     $(document).ready(onDeviceReady);
@@ -251,44 +270,28 @@
         });
     };
     function onBackKeyDown(){
-      makeNotification();
-      $.post(server, {'chat': chat, 'nama': nama, 'tipe': 2});
-
-      var x = confirm("Are you sure ?");
+      window.location="index.html";
       window.plugins.googleplus.disconnect(
         function (msg) {
-          alert("Berhasil Logout Google"); // do something useful instead of alerting
+          //alert("Berhasil Logout Google"); // do something useful instead of alerting
         },function (msg) {
-          alert("Gagal Logout Google"); // do something useful instead of alerting
-          x=false;
-          alert(msg);
+          //alert("Gagal Logout Google"); // do something useful instead of alerting
+          //alert(msg);
 
         }
       );
       facebookConnectPlugin.api("/me/permissions?method=delete", ['email','user_birthday','public_profile'],function (msg) {
-        alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+        //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
       }, function (msg) {
-        alert("Gagal Logout Facebook"); // do something useful instead of alerting
-        x=false;
-        alert(msg);
+        //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+        //alert(msg);
       });
       facebookConnectPlugin.logout(function (msg) {
-        alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
+        //alert("Berhasil Logout  Facebook"); // do something useful instead of alerting
       }, function (msg) {
-        alert("Gagal Logout Facebook"); // do something useful instead of alerting
-        x=false;
-        alert(msg);
+        //alert("Gagal Logout Facebook"); // do something useful instead of alerting
+        //alert(msg);
       });
-
-      if(x){
-        if (navigator.app) {
-            navigator.app.exitApp();
-        } else if (navigator.device) {
-            navigator.device.exitApp();
-        } else {
-            window.close();
-        }
-      }
     }
   app.initialize();
   </script>
